// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Wizard /> should call navigate the previous step when click on précédent 1`] = `
<div>
  <div
    class="sc-iGgWBj biWgIW"
  >
    <form
      class="sc-hBtRBD fnDxju"
    >
      <div
        class="sc-lbJcrp cdhttH"
      >
        <div
          class="sc-fKWMtX hAkXbB"
        >
          <h1
            class="sc-eifrsQ tgMxp"
          >
            test H1
          </h1>
        </div>
      </div>
      <div
        class="sc-iGgWBj sc-dQEtJz cWzIZL fChbfB"
      >
        <span
          class="sc-imwsjW kKJSLf"
        >
          Étape
          <span
            class="sc-kCMKrZ cfQfxP"
          >
            s
          </span>
          <span
            class="sc-dJiZtA dfTdvd"
          >
             
            1/2
          </span>
        </span>
        <ol
          class="sc-cfxfcM kMmTaI"
        >
          <li
            aria-live="polite"
            class="sc-epALIP xZDCN"
            title="onglet actif"
          >
            <span
              class="sc-iLsKjm bpYAjG"
            >
              1
            </span>
            First Step
          </li>
          <li
            class="sc-epALIP cJvUFn"
          >
            <span
              class="sc-iLsKjm gbcIPV"
            >
              2
            </span>
            Second Step
          </li>
        </ol>
      </div>
      <p>
        Premiere Etape
      </p>
      <div
        class="sc-fAGzit fbVmkc"
      >
        <button
          class="sc-kOPcWz cefBoA sc-dGCmGc sc-bkSUFG lmdpCB gSqrvY"
        >
          Commencer
          <svg
            aria-hidden="true"
            class="sc-deXhhX kQXjDw"
            fill="none"
            viewBox="0 0 28 15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m27.875 7.153-6-6.284a.526.526 0 0 0-.711-.023.496.496 0 0 0-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 0 0 .024.687.52.52 0 0 0 .711-.023l6-6.284a.506.506 0 0 0 0-.665z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Wizard /> should handle initialState.stepIndex 1`] = `
<div>
  <div
    class="sc-iGgWBj biWgIW"
  >
    <form
      class="sc-hBtRBD fnDxju"
    >
      <div
        class="sc-lbJcrp cdhttH"
      >
        <div
          class="sc-fKWMtX hAkXbB"
        >
          <h1
            class="sc-eifrsQ tgMxp"
          >
            test H1
          </h1>
        </div>
      </div>
      <div
        class="sc-iGgWBj sc-dQEtJz cWzIZL fChbfB"
      >
        <span
          class="sc-imwsjW kKJSLf"
        >
          Étape
          <span
            class="sc-kCMKrZ cfQfxP"
          >
            s
          </span>
          <span
            class="sc-dJiZtA dfTdvd"
          >
             
            2/2
          </span>
        </span>
        <ol
          class="sc-cfxfcM kMmTaI"
        >
          <li
            class="sc-epALIP cJvUFn"
          >
            <span
              class="sc-iLsKjm gbcIPV"
            >
              1
            </span>
            First Step
          </li>
          <li
            aria-live="polite"
            class="sc-epALIP xZDCN"
            title="onglet actif"
          >
            <span
              class="sc-iLsKjm bpYAjG"
            >
              2
            </span>
            Second Step
          </li>
        </ol>
      </div>
      <p>
        Deuxieme Etape
      </p>
      <label
        for="cb"
      >
        etape facultative
        <input
          id="cb"
          name="fooStep"
          type="checkbox"
          value=""
        />
      </label>
      <div
        class="sc-fAGzit fbVmkc"
      >
        <button
          class="sc-kOPcWz dSQWfG sc-dGCmGc lmdpCB"
          type="button"
        >
          Précédent
        </button>
        <button
          class="sc-kOPcWz gWtlVM sc-dGCmGc lmdpCB"
          type="button"
        >
          Imprimer le résultat
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Wizard /> should handle initialValues 1`] = `
<div>
  <div
    class="sc-iGgWBj biWgIW"
  >
    <form
      class="sc-hBtRBD fnDxju"
    >
      <div
        class="sc-lbJcrp cdhttH"
      >
        <div
          class="sc-fKWMtX hAkXbB"
        >
          <h1
            class="sc-eifrsQ tgMxp"
          >
            test H1
          </h1>
        </div>
      </div>
      <div
        class="sc-iGgWBj sc-dQEtJz cWzIZL fChbfB"
      >
        <span
          class="sc-imwsjW kKJSLf"
        >
          Étape
          <span
            class="sc-kCMKrZ cfQfxP"
          >
            s
          </span>
          <span
            class="sc-dJiZtA dfTdvd"
          >
             
            1/3
          </span>
        </span>
        <ol
          class="sc-cfxfcM kMmTaI"
        >
          <li
            aria-live="polite"
            class="sc-epALIP xZDCN"
            title="onglet actif"
          >
            <span
              class="sc-iLsKjm bpYAjG"
            >
              1
            </span>
            First Step
          </li>
          <li
            class="sc-epALIP cJvUFn"
          >
            <span
              class="sc-iLsKjm gbcIPV"
            >
              2
            </span>
            Second Step
          </li>
          <li
            class="sc-epALIP cJvUFn"
          >
            <span
              class="sc-iLsKjm gbcIPV"
            >
              3
            </span>
            Optional Step
          </li>
        </ol>
      </div>
      <p>
        Premiere Etape
      </p>
      <div
        class="sc-fAGzit fbVmkc"
      >
        <button
          class="sc-kOPcWz cefBoA sc-dGCmGc sc-bkSUFG lmdpCB gSqrvY"
        >
          Commencer
          <svg
            aria-hidden="true"
            class="sc-deXhhX kQXjDw"
            fill="none"
            viewBox="0 0 28 15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m27.875 7.153-6-6.284a.526.526 0 0 0-.711-.023.496.496 0 0 0-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 0 0 .024.687.52.52 0 0 0 .711-.023l6-6.284a.506.506 0 0 0 0-.665z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Wizard /> should navigate to the second step when click on Commencer 1`] = `
<div>
  <div
    class="sc-iGgWBj biWgIW"
  >
    <form
      class="sc-hBtRBD fnDxju"
    >
      <div
        class="sc-lbJcrp cdhttH"
      >
        <div
          class="sc-fKWMtX hAkXbB"
        >
          <h1
            class="sc-eifrsQ tgMxp"
          >
            test H1
          </h1>
        </div>
      </div>
      <div
        class="sc-iGgWBj sc-dQEtJz cWzIZL fChbfB"
      >
        <span
          class="sc-imwsjW kKJSLf"
        >
          Étape
          <span
            class="sc-kCMKrZ cfQfxP"
          >
            s
          </span>
          <span
            class="sc-dJiZtA dfTdvd"
          >
             
            2/2
          </span>
        </span>
        <ol
          class="sc-cfxfcM kMmTaI"
        >
          <li
            class="sc-epALIP cJvUFn"
          >
            <span
              class="sc-iLsKjm gbcIPV"
            >
              1
            </span>
            First Step
          </li>
          <li
            aria-live="polite"
            class="sc-epALIP xZDCN"
            title="onglet actif"
          >
            <span
              class="sc-iLsKjm bpYAjG"
            >
              2
            </span>
            Second Step
          </li>
        </ol>
      </div>
      <p>
        Deuxieme Etape
      </p>
      <label
        for="cb"
      >
        etape facultative
        <input
          id="cb"
          name="fooStep"
          type="checkbox"
          value=""
        />
      </label>
      <div
        class="sc-fAGzit fbVmkc"
      >
        <button
          class="sc-kOPcWz dSQWfG sc-dGCmGc lmdpCB"
          type="button"
        >
          Précédent
        </button>
        <button
          class="sc-kOPcWz gWtlVM sc-dGCmGc lmdpCB"
          type="button"
        >
          Imprimer le résultat
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Wizard /> should render a step 1`] = `
<div>
  <div
    class="sc-iGgWBj biWgIW"
  >
    <form
      class="sc-hBtRBD fnDxju"
    >
      <div
        class="sc-lbJcrp cdhttH"
      >
        <div
          class="sc-fKWMtX hAkXbB"
        >
          <h1
            class="sc-eifrsQ tgMxp"
          >
            test H1
          </h1>
        </div>
      </div>
      <div
        class="sc-iGgWBj sc-dQEtJz cWzIZL fChbfB"
      >
        <span
          class="sc-imwsjW kKJSLf"
        >
          Étape
          <span
            class="sc-kCMKrZ cfQfxP"
          >
            s
          </span>
          <span
            class="sc-dJiZtA dfTdvd"
          >
             
            1/2
          </span>
        </span>
        <ol
          class="sc-cfxfcM kMmTaI"
        >
          <li
            aria-live="polite"
            class="sc-epALIP xZDCN"
            title="onglet actif"
          >
            <span
              class="sc-iLsKjm bpYAjG"
            >
              1
            </span>
            First Step
          </li>
          <li
            class="sc-epALIP cJvUFn"
          >
            <span
              class="sc-iLsKjm gbcIPV"
            >
              2
            </span>
            Second Step
          </li>
        </ol>
      </div>
      <p>
        Premiere Etape
      </p>
      <div
        class="sc-fAGzit fbVmkc"
      >
        <button
          class="sc-kOPcWz cefBoA sc-dGCmGc sc-bkSUFG lmdpCB gSqrvY"
        >
          Commencer
          <svg
            aria-hidden="true"
            class="sc-deXhhX kQXjDw"
            fill="none"
            viewBox="0 0 28 15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m27.875 7.153-6-6.284a.526.526 0 0 0-.711-.023.496.496 0 0 0-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 0 0 .024.687.52.52 0 0 0 .711-.023l6-6.284a.506.506 0 0 0 0-.665z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </form>
  </div>
</div>
`;
